<resources>
    <string name="app_name">Just Java</string>
    <string name="add_name">Add your name here</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="send">Send</string>
    <string name="mail_title">Coffee Order for</string>
    <string name="send_mail">Send Mail</string>
    <string name="name">Name</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you!</string>
    <string name="too_many_coffees">Too many coffees</string>
    <string name="no_negative_coffees">No negative coffees allowed</string>
</resources>
